# curso-data-science

./: 01_arq_teste_csv.ipynb  01_teste_ambiente.ipynb  01_tipos_de_dados.ipynb  README.md  pyproject.toml
