[project]
name = "curso-data-science"
version = "0.1.0"
description = ""
authors = [
    {name = "JeanEduardo1981",email = "jeanersousa1981@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "jupyterlab (>=4.5.6,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
